<resources>
    <string name="app_name">&appname;</string>
    <string name="cdc_name_ch">衛生福利部疾病管制署</string>
    <string name="cdc_name_translate">Taiwan Centers for Disease Control</string>
    <string name="introduction_family_title">Stay Safe, Keep Your Family Safe</string>
    <string name="introduction_family_description">The Taiwan Social Distancing App was developed by the Taiwan AI Labs in cooperation with the Executive Yuan and the Taiwan Centers for Disease Control in order to reduce the likelihood of disease transmission and keep people safe.</string>
    <string name="introduction_privacy_title">Privacy and Data Protection</string>
    <string name="introduction_privacy_description">Taiwan Social Distancing App use is anonymous - users do not need to register and no user data will be collected. The only form of data transmission involved is the observation of Bluetooth signals between handheld devices to calculate the distance between each user.\n\nUser privacy will be ensured via decentralized storage of anonymous IDs for individual devices; contact data will be compiled by each respective device.</string>
    <string name="introduction_intro_title">Reduce the Spread of Pandemic</string>
    <string name="introduction_intro_description">Users who have tested positive can choose to anonymously publish their device\'s anonymous IDs. When users with a positive test publish their results, people who have been in proximity to this device and maintained contact for a certain period of time will receive a notification. This process guarantees the anonymity and personal privacy of those who share their positive test results while contributing to keeping our communities informed and diligent in taking preventative and cautionary measures.</string>
    <string name="introduction_hcert_title">@string/hcert_full_name</string>
    <string name="introduction_hcert_description">The App provides an easy way to securely store and present COVID-19 Vaccination Certificate for you and your loved ones.\n\nYou also can use the QR code of the vaccination certificates for other people or organizations to verify your vaccination status. No internet connection is required and Your data is only stored locally on your mobile device.</string>
    <string name="start_using">Get started</string>
    <string name="main_button_start">Enable Exposure Notification</string>
    <string name="main_button_already_start">Notification is Enabled</string>
    <string name="main_info">%2$s\n%1$s\n%3$s</string>
    <string name="main_info_first_launch_time">Since enabled at %1$s</string>
    <string name="main_info_enable_time_percent">Exposure Notification operating ratio %1$d%%</string>
    <string name="main_info_last_check_time">Last checked at %1$s</string>
    <string name="dialog_low_storage_title">Insufficient Data Storage Available</string>
    <string name="dialog_low_storage_message">To receive notifications, please free up storage.</string>
    <string name="risk_brief_unknown">Exposure Notification is not enabled</string>
    <string name="risk_detail_unknown">Click the button below to enable exposure notification for possible contact with COVID-positive persons.</string>
    <string name="risk_brief_normal">No contact with registered positive tests</string>
    <string name="risk_detail_normal">Please continue to maintain social distancing.</string>
    <string name="risk_brief_risky">You have been in proximity with registered positive tests</string>
    <string-array name="risk_detail_risky">
        <item>Stay Calm: You have been identified as a close contact of a confirmed COVID-19 case, but that does NOT mean you are a confirmed case.\n</item>
        <item>Self-Health Management: We advise you to conduct self-health management and be aware of your health conditions.\n</item>
        <item>Health Conditions: If you have fever or respiratory symptoms, please contact your local health agency, or dial the toll-free hotline \"1922\" for testing arrangement.</item>
    </string-array>
    <string name="risk_detail_risky_split">:</string>
    <string name="state_en_not_support">Exposure notification is not supported.</string>
    <string name="state_hw_not_support">Hardware of this device does not support exposure notification.</string>
    <string name="state_user_profile_not_support">Exposure notification is not supported for current user profile.</string>
    <string name="state_not_in_allowlist">The client is not in approved client list.</string>
    <string name="state_unknown">Current status is unknown.</string>
    <string name="state_instruction">For further instructions, see \"Next Step.\"</string>
    <string name="state_instruction_next_step">Next Step</string>
    <string name="menu_barcode_scanning">1922 SMS Contact Tracing</string>
    <string name="menu_about">App Introduction</string>
    <string name="menu_daily_summary">Daily Summary</string>
    <string name="menu_cancel_alert">Reset Your Status</string>
    <string name="menu_upload">Upload Anonymous IDs</string>
    <string name="menu_privacy">Privacy Policy and Terms of Use</string>
    <string name="menu_control">Exposure Notification Settings</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_hints">Hints</string>
    <string name="menu_settings">Settings</string>
    <string name="url_privacy">https://ailabs.tw/taiwan-social-distancing-apppersonal-data-protection-note/</string>
    <string name="url_faq">https://www.cdc.gov.tw/Category/Page/R8bAd_yiVi22CIr73qM2yw</string>
    <string name="url_clean_cache">https://support.google.com/googleplay/answer/9037938</string>
    <string name="url_quick_settings">https://support.google.com/android/answer/9083864</string>
    <string name="url_hcert_apply">https://dvc.mohw.gov.tw/vapa/apply/Index.init.ctr</string>
    <string name="url_hcert_vaccine_appointment">https://www.cdc.gov.tw/Category/List/u4l1b_gHhf9WDjhEtRmRRw</string>
    <string name="url_hcert_faq">https://dvc.mohw.gov.tw/vapa/template/vapa/common/pdf/QA.pdf</string>
    <string name="daily_summary_no_contact">No Contact</string>
    <string name="daily_summary_less_then_2_mins">Less than 2 min</string>
    <string name="daily_summary_mins">%1$d min</string>
    <string name="daily_summary_hrs_mins">%1$d hr %2$d min</string>
    <string name="upload_confirm_title">Have You Had a Positive Test?</string>
    <string name="upload_confirm_message">Upload your anonymous IDs to reduce transmission.</string>
    <string name="upload_title">Upload Anonymous IDs</string>
    <string name="upload_date">Please Enter Start and End Dates</string>
    <string name="upload_date_start_enter_hint">Please Enter Start Date</string>
    <string name="upload_date_end_enter_hint">Please Enter End Date</string>
    <string name="upload_date_start_hint">Start Date</string>
    <string name="upload_date_end_hint">End Date</string>
    <string name="upload_tek_description">Please enter the verification code provided by the Taiwan Centers for Disease Control. After submitting, your anonymous IDs will be uploaded. These data will be stored by the CDC and will be automatically deleted after 10 days.</string>
    <string name="upload_success">Upload Successful</string>
    <string name="upload_fail">Upload Failed</string>
    <string name="upload_fail_message_no_files">No data between start and end dates.</string>
    <string name="upload_fail_message_invalid_code">Invalid verification code.</string>
    <string name="upload_fail_message_no_granted_tek">Click the submit button to upload and share your anonymous IDs.</string>
    <string name="enter_verification_code">Please Enter Verification Code</string>
    <string name="enter_verification_code_hint">Verification Code</string>
    <string name="send_verification_code">Submit</string>
    <string name="send_verification_code_not_enabled">@string/risk_brief_unknown</string>
    <string name="enter_phone_number">Please enter your mobile number</string>
    <string name="enter_phone_number_hint">Mobile Number</string>
    <string name="request_verification_code">Get Verification Code</string>
    <string name="request_verification_code_description">This allows user who is the COVID-19 confirmed case to receive verification code.</string>
    <string name="request_verification_code_success">Entered mobile number successfully</string>
    <string name="request_verification_code_success_message">Verification code will be sent to you via SMS in 5 minutes, please try again if you do not receive it.</string>
    <string name="request_verification_code_fail">Enter mobile number failed</string>
    <string name="request_verification_code_fail_message">Connection error occurred, please try again later.</string>
    <string name="request_verification_code_fail_limit_exceeded_message">Number of requests exceeded limit, please try again tomorrow.</string>
    <string name="request_verification_code_fail_invalid_phone_number_message">Invalid mobile number, please re-enter.</string>
    <string name="cancel_alert_confirm_title">Are you sure you want to reset your status?</string>
    <string name="cancel_alert_confirm_message">Reset status upon completion of contact tracing assessment.</string>
    <string name="cancel_alert_test_date">Please Enter Date of Contact Tracing Assessment</string>
    <string name="cancel_alert_test_date_hint">Assessment Date</string>
    <string name="cancel_alert_description">Please enter the verification code provided by the local Department of Health. After submitting, the warning will be disabled.</string>
    <string name="cancel_alert_acknowledgement">I have read and agreed the How to Protect Yourself &amp; Others.</string>
    <string-array name="cancel_alert_intruction">
        <item>I have taken a COVID-19 rapid test by myself, and the result was negative.\n</item>
        <item>I will watch for my health status. If I have symptoms such as fever, respiratory symptoms, diarrhea, or new loss of taste/smell, I will take the COVID-19 rapid test.\n</item>
        <item>If I test positive in my COVID-19 rapid test, I will wear a medical mask to get a PCR test at a nearby community testing site or a hospital, and do not taking the public transportation.\n</item>
        <item>I have notified my family members that I have received a \"Exposure Notification\" warning, and they must take appropriate precautions such as washing hands frequently and wearing masks.\n</item>
        <item>I will avoid unnecessary family gatherings and visits.\n</item>
        <item>I will avoid participating in activities that cannot maintain social distancing and contact with unspecified people.\n</item>
        <item>I will avoid participating in indoor activities or work where the masks are not required.\n</item>
    </string-array>
    <string name="barcode_shortcut_label">1922 SMS</string>
    <string name="barcode_shortcut_label_long">Scan 1922 QR Code</string>
    <string name="barcode_hint_1922_invalid">Invalid 1922 SMS contact tracing QR code.</string>
    <string name="barcode_hint_hcert_no_qr_code">Failed to detect vaccination certificate QR code.</string>
    <string name="barcode_hint_hcert_invalid">Invalid vaccination certificate QR code.</string>
    <string name="barcode_hint_hcert_duplicated">Duplicated vaccination certificate.</string>
    <string name="barcode_hint_hcert_expired">Expired vaccination certificate.</string>
    <string name="barcode_camera_permission_dialog_title">&appname; Would Like to Access the Camera</string>
    <string name="barcode_camera_permission_dialog_message">&appname; uses the camera to scan QR code for 1922 SMS contact tracing registration.</string>
    <string name="barcode_camera_permission_dialog_message_hcert">&appname; uses the camera to scan QR code of vaccination certificate.</string>
    <string name="control_exposure">Notification Service</string>
</resources>