<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="60dp"
        android:scaleType="fitEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/introduction_intro" />

    <TextView
        android:id="@+id/textTitle"
        style="@style/Text.Title"
        android:layout_marginTop="36dp"
        android:autoSizeMaxTextSize="@dimen/text_size_title"
        android:autoSizeMinTextSize="@dimen/text_size_min"
        android:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8"
        tools:text="@string/introduction_family_title" />

    <TextView
        android:id="@+id/textDescription"
        style="@style/Text"
        android:layout_height="0dp"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="24dp"
        android:autoSizeMaxTextSize="@dimen/text_size"
        android:autoSizeMinTextSize="@dimen/text_size_min"
        android:autoSizeTextType="uniform"
        android:gravity="top"
        app:layout_constraintBottom_toTopOf="@id/button"
        app:layout_constraintEnd_toEndOf="@+id/textTitle"
        app:layout_constraintStart_toStartOf="@+id/textTitle"
        app:layout_constraintTop_toBottomOf="@+id/textTitle"
        tools:text="@string/introduction_privacy_description" />

    <Button
        android:id="@+id/button"
        style="@style/Button.Major"
        android:layout_marginBottom="48dp"
        android:text="@string/start_using"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>