<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <ImageView
        android:id="@+id/splash_icon"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@drawable/icon"
        app:layout_constraintBottom_toTopOf="@+id/splash_app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/splash_app_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/main_margin_horizontal"
        android:layout_marginTop="32dp"
        android:autoSizeMaxTextSize="28sp"
        android:autoSizeMinTextSize="1sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:lines="1"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splash_icon"
        tools:text="臺灣社交距離" />

    <TextView
        android:id="@+id/splash_cdc_name_ch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/main_margin_horizontal"
        android:autoSizeMaxTextSize="16sp"
        android:autoSizeMinTextSize="1sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:lines="1"
        android:text="@string/cdc_name_ch"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/splash_cdc_name_translate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/splash_cdc_name_translate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/main_margin_horizontal"
        android:layout_marginBottom="25dp"
        android:autoSizeMaxTextSize="10sp"
        android:autoSizeMinTextSize="1sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/cdc_name_translate"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>